--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,20 +36,13 @@ jobs:
 
       - name: Organize files and update index
         run: |
-          # Create directories if they don't exist
-          mkdir -p wheels
-          mkdir -p simple
-
-          # Move wheels to wheels directory
-          mv dist/*.whl wheels/ 2>/dev/null || true
-
           # Generate PEP-503 index using simple503
-          uvx simple503 wheels simple
+          uvx simple503 -s -B /manifest-builder dist simple
 
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .
+          path: simple
 
       - name: Deploy to GitHub Pages
         id: deployment
