--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "manifest-builder"
-version = "0.2.0"
+dynamic = ["version"]
 description = "Generate materialized Kubernetes manifests from Helm charts"
 readme = "README.md"
 requires-python = ">=3.14"
@@ -22,5 +22,11 @@ dev = [
 ]
 
 [build-system]
-requires = ["uv-build"]
-build-backend = "uv_build"
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
+
+[tool.hatch.version]
+source = "vcs"
+
+[tool.hatch.build.hooks.vcs]
+version-file = "src/manifest_builder/_version.py"
