Exclude auto-generated _version.py from git and ruff checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,6 @@ source = "vcs"
 
 [tool.hatch.build.hooks.vcs]
 version-file = "src/manifest_builder/_version.py"
+
+[tool.ruff]
+exclude = ["src/manifest_builder/_version.py"]
